--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>Laugh Tale</title>
+  <title>Foco +</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="ilha.png">
+  <link rel="icon" type="image/png" href="seta-para-cima.png">
 </head>
 <body>
   <app-root></app-root>
