--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,20 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>Foco +</title>
+
+  <title>Foco + | Organização, Produtividade e Estudos</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="Foco+ é uma aplicação web desenvolvida com Angular 
+    focada em organização pessoal, produtividade e acompanhamento de estudos, com foco 
+    em UX e boas práticas de frontend.">
+
+  <meta name="author" content="Lucas Patrício - Desenvolvedor Front-end">
+
   <link rel="icon" type="image/png" href="seta-para-cima.png">
+
 </head>
 <body>
   <app-root></app-root>
